# QViewNG

./: .dockerignore  .env.dev.example  .env.example  .env.release.example  .env.test.example  .gitignore  Dockerfile  README.md  betarun  build.rs  compose.yaml  setup-db-valkey.sh
backend/: Cargo.toml  run-backend.sh  run-tests.sh  test-db-diesel-migration-run.sh
backend/config/: logging_prod.yaml
backend/migrations/2022-09-25-020407_rebuild_tournament/: up.sql
backend/migrations/2025-12-16-213139_drop_todo_table/: up.sql
backend/migrations/2025-12-23-074103_drop_division_games_table/: down.sql  up.sql
backend/migrations/2025-12-23-080814_add_name_to_users_table/: down.sql  up.sql
backend/migrations/2025-12-23-162225_move_quizmaster_and_contentjudge/: down.sql  up.sql
backend/migrations/2025-12-23-163809_add_rounds_table/: down.sql  up.sql
backend/src/: constants.rs  errors.rs  fullstack.rs  lib.rs  main.rs  middleware.rs  routes.rs  schema.rs
backend/src/auth/: mod.rs
backend/tests/: README.txt  apicalllog_test.rs  auth_test.rs  computer_test.rs  createtournamentapplicant_test.rs  division_test.rs  equipment_test.rs  equipmentdbo_test.rs  equipmentregistration_test.rs  equipmentset_test.rs  extensioncord_test.rs  game_test.rs  gameevent_test.rs  interfacebox_test.rs  jumppad_test.rs  microphonerecorder_test.rs  monitor_test.rs  permission_test.rs  powerstrip_test.rs  projector_test.rs  role_test.rs  room_test.rs  roster_test.rs  round_test.rs  statsgroup_test.rs  team_test.rs  tournament_test.rs  tournamentgroup_test.rs  user_role_test.rs  user_test.rs
(+375 files in other folders)
