[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fullstack"
path = "backend/fullstack.rs"

[[bin]]
name = "replay"
publish = false
version = "0.1.0"
path = "utils/src/replay.rs"

[dependencies]
actix-web = "4"
base64 = "0.22.1"
diesel = { version = "2", features = ["postgres", "chrono", "r2d2", "uuid"] }
log = "0.4.29"
qstring = "0.7.2"
serde = "1.0.228"
sha1 = "0.10.6"
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
rand = "0.9.2"
redis = "1.0.1"
actix-http = "3.11.2"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15.0"
csv = "1.4.0"
url = "2.5.7"
log4rs = "1.4.0"
log4rs-syslog = "3.0.3"
hyper = { version = "1.8.1", features = ["full"] }
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"

[print_schema]
file = "src/schema.rs"
